# PrairieLearn

./: .agentignore  .codecov.yml  .coderabbit.yaml  .coverage  .coverage.xml  .cursorignore  .dependency-cruiser.js  .dockerignore  .editorconfig  .eslintignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .eslintrc.yml  .git-blame-ignore-revs  .gitattributes  .gitignore  .hadolint.yaml  .htmlhintrc  .htmlmustache.jsonc  .knip.ts  .markdownlint-cli2.yaml  .markdownlint.yml  .mocharc.js  .npmrc  .oxlintrc.json  .prettierignore  .prettierrc.json  .readthedocs.yml  .rules  .sqlfluff  .sqlfluffignore  .squawk.toml  .travis.yml  .webui_secret_key  .yarnrc.yml  243_submissions__add_files.sql  AGENTS.md  CODEOWNERS  CONTEXT.md  (+105 more)
.agentskills/: README.md  setup.sh
.changeset/: accessible-otp-input.md  add-boolean-column-support.md  add-chip-group-component.md  add-execute-scripts.md  add-migration-table-bounds-helper.md  add-radio-group-component.md  add-rich-select-component.md  add-truncate-middle.md  add-use-resize-handle-hook.md  add-workflow-engine.md  add-workflows-package.md  always-on-access-control.md  assets-chunk-sizes.md  auto-size-cell-content.md  beige-lizards-tap.md  blue-coins-appear.md  blue-flies-clap.md  blue-trains-begin.md  breezy-cameras-bathe.md  breezy-fishes-act.md  breezy-mice-exercise.md  breezy-paths-bow.md  bright-bats-act.md  bright-dots-tickle.md  bright-ghosts-march.md  bright-lines-judge.md  bright-parrots-beam.md  bundle-size-reporting.md  busy-peaches-dance.md  calm-garlics-hear.md  canvas-csv-download-button.md  chilled-dancers-fix.md  chilled-pumas-lie.md  chilly-bottles-itch.md  chilly-shirts-make.md  chilly-symbols-stick.md  chubby-words-knock.md  clean-planets-know.md  clear-moose-hug.md  clever-insects-bow.md  (+338 more)
.claude/: settings.json  settings.local.json
.conductor/: settings.toml
.config/: mise.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml  title-labeler.yml
.sg_rules/: untyped-sql.yml
admin_queries/: README.md  available_assessment_access_rules.json  available_assessment_access_rules.sql  available_assessments.sql  config_delete.json  config_delete.sql  config_select.json  config_select.sql  config_upsert.json  config_upsert.sql  course_instance_active_enrollments.json  course_instance_active_enrollments.sql  course_instance_compute_time.json  course_instance_compute_time.sql  courses_with_chunks.sql  courses_without_chunks.sql  (+50 more)
apps/prairielearn/python/: README.md  check_data.py  check_data_test.py  colors.py  colors_test.py  conftest.py  prairielearn.py  prairielearn_test.py  pyproject.toml  python_helper_sympy.py  python_helper_sympy_test.py  question_phases.py  to_precision.py  traverse.py  traverse_test.py  zygote.py  zygote_benchmark.py  zygote_utils.py  zygote_utils_test.py
apps/prairielearn/python/colors/: __init__.py
apps/prairielearn/python/elements/pl-answer-panel/: pl-answer-panel.py
apps/prairielearn/python/elements/pl-big-o-input/: big_o_utils.py  big_o_utils_test.py  pl-big-o-input.py
apps/prairielearn/python/elements/pl-code/: pl-code.py
apps/prairielearn/python/elements/pl-drawing/: elements.py
apps/prairielearn/python/elements/pl-excalidraw/: pl-excalidraw.js  pl-excalidraw.py
apps/prairielearn/python/elements/pl-external-grader-results/: pl-external-grader-results.py
apps/prairielearn/python/elements/pl-external-grader-variables/: pl-external-grader-variables.py
apps/prairielearn/python/elements/pl-file-editor/: pl-file-editor.py
apps/prairielearn/python/elements/pl-file-upload/: pl-file-upload.py
apps/prairielearn/python/elements/pl-graph/: pl-graph.py
apps/prairielearn/python/elements/pl-matching/: pl-matching.py
apps/prairielearn/python/elements/pl-matrix-component-input/: pl-matrix-component-input.py
apps/prairielearn/python/elements/pl-matrix-latex/: pl-matrix-latex.py
apps/prairielearn/python/elements/pl-multiple-choice/: pl-multiple-choice.py
apps/prairielearn/python/elements/pl-number-input/: pl-number-input.py
apps/prairielearn/python/elements/pl-order-blocks/: pl-order-blocks.py
apps/prairielearn/python/elements/pl-overlay/: pl-overlay.py
apps/prairielearn/python/elements/pl-prairiedraw-figure/: pl-prairiedraw-figure.py
apps/prairielearn/python/elements/pl-template/: pl-template.py
apps/prairielearn/python/elements/pl-units-input/: pl-units-input.py
apps/prairielearn/python/elements/pl-variable-score/: pl-variable-score.py
apps/prairielearn/python/elements/pl-workspace/: pl-workspace.py
apps/prairielearn/python/elements/pl-xss-safe/: pl-xss-safe.py
apps/prairielearn/python/prairielearn/: __init__.py  attribute_utils.py  check_data.py  check_data_test.py  colors.py  colors_test.py  conftest.py  conversion_utils.py  conversion_utils_merged.py  core.py  element_schemas.py  extension_utils.py  grading_utils.py  html_utils.py  misc_utils.py  prairielearn.py  prairielearn_test.py  python_helper_sympy.py  python_helper_sympy_test.py  question_phases.py  question_utils.py  sympy_utils.py  timeout_utils.py  timeouts.py  to_precision.py  traverse_test.py  unicode_utils.py  validation_utils.py  zygote.py  zygote_utils.py  zygote_utils_test.py
apps/prairielearn/python/prairielearn/core_split/: attribute_utils.py  extension_utils.py
apps/prairielearn/python/prairielearn/internal/: __init__.py  check_data.py  question_phases.py  traceback.py  traverse.py  zygote_utils.py
apps/prairielearn/python/python_helper_sympy/: __init__.py
apps/prairielearn/python/test/: attribute_utils_test.py  check_data_test.py  colors_test.py  compat_test.py  conftest.py  conversion_utils_test.py  core_test.py  dummy_extension.py  misc_test.py  python_helper_sympy_test.py  sympy_utils_test.py  test_element_schemas.py  timeout_utils_test.py  to_precision_test.py  traverse_test.py  unicode_utils_test.py  zygote_utils_test.py
apps/prairielearn/python/to_precision/: __init__.py
scripts/sqlfluff/: deleted_at_rule.py  enrollment_status_rule.py  prairielearn_rules.py  pyproject.toml  soft_filter.py
(+15024 files in other folders)
