[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "prairielearn"
version = "0.0.0+internal"
readme = "README.md"
requires-python = ">=3.13,<3.14"
# This package is intended for internal VCS/subdirectory installs, not PyPI.
classifiers = ["Private :: Do Not Upload"]
dependencies = [
  "chevron==0.14.0",
  "coloraide==8.8.1",
  "faker==40.15.0",
  "lxml==6.1.0",
  "matplotlib==3.10.9",
  "networkx==3.6.1",
  "nltk==3.9.4",
  "numpy==2.4.4",
  "pandas==2.3.3",
  "pint==0.25.3",
  "psutil==7.2.2",
  "rich==15.0.0",
  "scikit-learn==1.8.0",
  "sympy==1.14.0",
  "text-unidecode==1.3",
]

[tool.setuptools]
py-modules = ["colors", "python_helper_sympy", "to_precision", "zygote"]

[tool.setuptools.packages.find]
include = ["prairielearn*"]
