[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

# This package is intended for internal VCS/subdirectory installs:
#   python -m pip install "prairielearn @ git+https://github.com/PrairieLearn/PrairieLearn.git@<commit>#subdirectory=apps/prairielearn/python"
#   uv add "prairielearn @ git+https://github.com/PrairieLearn/PrairieLearn.git@<commit>#subdirectory=apps/prairielearn/python"
#
# It is not intended to be published to PyPI.
[project]
name = "prairielearn"
version = "0.0.0+internal"
readme = "README.md"
requires-python = ">=3.13,<3.14"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
  "coloraide==8.8.1",
  "jsonschema==4.25.1",
  "lxml==6.1.1",
  "networkx==3.6.1",
  "numpy==2.4.6",
  "pandas==2.3.3",
  "pint==0.25.3",
  "rich==15.0.0",
  "sympy==1.14.0",
  "text-unidecode==1.3",
]

[tool.setuptools.packages.find]
# We intentionally exclude internal things, like `zygote.py`, as well
# as compatibility shims for deprecated entrypoints.
include = ["prairielearn*"]
